bugfix; change collapsed widget

--- a/static/style.less
+++ b/static/style.less
@@ -1,16 +1,22 @@
-.iframely-embed {
-	.media-object {
-		max-width: 128px;
-	}
+.iframely-link {
 
-	.description {
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden;
-		width: 400px;
-	}
+  .thumb {
+	max-width: 16px;
+	margin-right: 8px;
+  }
+  
+  .iframely-embed {
+	  .media-object {
+		  max-width: 128px;
+	  }
 
-	.thumb {
-		max-width: 32px;
-	}
+	  .description {
+		  text-overflow: ellipsis;
+		  white-space: nowrap;
+		  overflow: hidden;
+		  width: 400px;
+	  }
+	  
+  }
 }
+
